XML Parser: XHTML named entities should be available in documents with MathML 2.0 DTD.

This CL might help polyfills though we don't support MathML 2.0.
This fixes 2,117 test failures in WPT.

Bug: 816320
Change-Id: I93a563ae013d0c97717500130f26605e5d2ba2d3
Reviewed-on: https://chromium-review.googlesource.com/936861
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539059}
Former-commit-id: 80385fb376c4d8ddacb949f65317352977ca3f77